edge range thumb bug z-index fix

--- a/src/scss/imports/_quote.scss
+++ b/src/scss/imports/_quote.scss
@@ -213,7 +213,8 @@ ul li .quote-dropdown__item-container li:nth-of-type(1) .quote-dropdown__item {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: center;  
+    align-items: center; 
+    z-index: 500; 
 }
 
 .quote-range__input{
@@ -224,7 +225,7 @@ ul li .quote-dropdown__item-container li:nth-of-type(1) .quote-dropdown__item {
     outline: none;
     padding: 0;
     margin: 0;
-    z-index: 1001;
+    z-index: 300;
     appearance: none;
 }
 
